<resources>
    <string name="app_name">Play Music</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <!-- Accessibility Labels -->
    <string name="accessibility_options">Options</string>
    <string name="accessibility_search_back">Close Search</string>
    <string name="accessibility_search_mic">Voice Search</string>
    <string name="accessibility_play">Play</string>
    <string name="accessibility_pause">Pause</string>
    <string name="accessibility_album_art">Album Art</string>
    <string name="accessibility_thumbs_up">Thumbs Up</string>
    <string name="accessibility_previous">Previous track</string>
    <string name="accessibility_play_main">Play track</string>
    <string name="accessibility_pause_main">Pause track</string>
    <string name="accessibility_next">Next track</string>
    <string name="accessibility_thumbs_down">Thumbs Down</string>
    <string name="accessibility_repeat">Repeat</string>
    <string name="accessibility_shuffle">Shuffle</string>
    
    <!-- UI Strings -->
    <string name="search_hint">Search Play Music</string>
    <string name="unknown_title">Unknown Title</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="shuffle_all">SHUFFLE ALL</string>
    <string name="title_listen_now">Listen Now</string>
    <string name="title_music_library">Music library</string>
    <string name="title_top_charts">Top charts</string>
    <string name="title_browse_stations">Browse stations</string>
    <string name="title_shop">Shop</string>
    <string name="title_settings">Settings</string>
    <string name="title_podcasts">Podcasts</string>
    <string name="title_new_releases">New releases</string>
    <string name="more">MORE</string>
    <string name="recommended_new_release_title">Recommended new releases</string>
    <string name="all_new_release_title">All new releases</string>
    
    <!-- Bottom Sheet Options -->
    <string name="option_play_next">Play next</string>
    <string name="option_add_to_queue">Add to queue</string>
    <string name="option_add_to_playlist">Add to playlist</string>
    <string name="option_go_to_artist">Go to artist</string>
    <string name="option_go_to_album">Go to album</string>
</resources>
